@@ -1,4 +1,4 @@
-/*	$KAME: in6_rmx.c,v 1.22 2004/09/30 21:52:16 jinmei Exp $	*/
+/*	$KAME: in6_rmx.c,v 1.23 2004/10/05 07:42:01 suz Exp $	*/
 
 /*
  * Copyright (C) 1995, 1996, 1997, and 1998 WIDE Project.
@@ -216,7 +216,11 @@ in6_addroute(void *v_arg, void *n_arg, struct radix_node_head *head,
 				ret = rn_addroute(v_arg, n_arg, head,
 					treenodes);
 			}
+#if defined(__FreeBSD__) && __FreeBSD_version >= 502010
+			RTFREE_LOCKED(rt2);
+#else
 			RTFREE(rt2);
+#endif
 		}
 	} else if (ret == NULL && rt->rt_flags & RTF_CLONING) {
 		struct rtentry *rt2;
@@ -245,7 +249,11 @@ in6_addroute(void *v_arg, void *n_arg, struct radix_node_head *head,
 			    rt2->rt_ifp == rt->rt_ifp) {
 				ret = rt2->rt_nodes;
 			}
+#if defined(__FreeBSD__) && __FreeBSD_version >= 502010
+			RTFREE_LOCKED(rt2);
+#else
 			RTFREE(rt2);
+#endif
 		}
 	}
 	return ret;
