@@ -1,7 +1,11 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2670 2004/10/05 01:57:56 suz Exp $
+$KAME: CHANGELOG,v 1.2671 2004/10/05 07:42:00 suz Exp $
 
 <200410>
+2004-10-05  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
+	* kame/sys/netinet6/in6_rmx.c: fixed a freebsd5 kernel crash due to a
+	  LOR caused by ICMPv6 redirect
+
 2004-10-05  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
 	* freebsd5/sys/dev/syscons/syscons.c: FreeBSD Security Advisory:
 	  FreeBSD-SA-04:15.syscons 
